apps/support/wordpress/overlays/homelab/mariadb-tuning-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: wordpress
spec:
  template:
    spec:
      volumes:
      - name: mariadb-tuning
        configMap:
          name: mariadb-tuning
      containers:
      - name: mariadb
        resources:
          requests:
            cpu: "300m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
        volumeMounts:
        - name: mariadb-tuning
          mountPath: /etc/mysql/conf.d/zz-tuning.cnf
          subPath: zz-tuning.cnf
