apps/support/wordpress/overlays/homelab/patch-wp-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 2
  template:
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values: ["wordpress"]
                topologyKey: kubernetes.io/hostname
      containers:
        - name: wordpress
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "3"
              memory: "3Gi"
