apps/support/wordpress/overlays/homelab/wordpress-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress          # ändra om din deploy heter något annat
  namespace: wordpress
spec:
  template:
    spec:
      containers:
      - name: wordpress    # ändra om din container heter något annat
