apps/support/wordpress/overlays/homelab/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
spec:
  rules:
    - host: wp.support4u.se
  tls:
    - hosts: ["wp.support4u.se"]
      secretName: wordpress-tls
